made changes to counter

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="total"><p id="totalscore">Your total score is:</p></div>
 
-<div class="score">0</div>
+<div class="score"></div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
